Fix screen jumping when the scrollbar appears

--- a/MiniBankWEB/src/styles.scss
+++ b/MiniBankWEB/src/styles.scss
@@ -11,6 +11,7 @@
 html {
     background-color: var(--bg-color);
     color: var(--main-font-color);
+    scrollbar-gutter: stable both-edges;
 
     font-family: "Space Grotesk", sans-serif;
     font-optical-sizing: auto;
